--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="Surya__img">
-                        <img src="files/img/Surya.jpg" alt="">
+                        <img src="Surya.jpg" alt="">
                     </div>
                     
                     <div>
@@ -151,7 +151,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="work6__img">
-                        <img src="files/img/work6.jpg" alt="">
+                        <img src="work6.jpg" alt="">
                     </div>
                     
                     <div>
@@ -194,6 +194,6 @@
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <!--===== MAIN JS =====-->
-        <script src="assets/js/main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
